--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
-body {
+/* CSS Styling */
 
+/*Overall font*/
+body {
   font-family:'Montserrat', sans-serif;
   font-size: 1rem;
 }
-
   
-  /* HEADER TAGS */
+  /* Headers and Links */
   
   h1, h2 {
     font-weight: 700 !important;
@@ -19,7 +20,7 @@ body {
   /* HYPERLINKS */
   
   a {
-    color: rgba(62, 192, 62, 0.897);
+    color: rgba(36, 165, 36, 0.897);
     text-decoration: none;
     font-weight: 700;
   }
@@ -35,29 +36,23 @@ body {
   span {
     padding-left: 1vw;
     padding-right: 1vw;
-    /* padding and font size reduced in max-width: 600px media query in grid.css */
   }
-  
   
   .nav {
     background-color: #ffffff;
     text-align: right;
-    /* text align: center in max-width: 600px media query in grid.css */
   }
   
   .jumbotron {
     background-image: url(https://www.wallpapertip.com/wmimgs/82-822562_src-gorgerous-coding-background-data-id-programming.jpg) !important;
-    /* background-size: cover; */
     background-position: 50% 100%;
     background-attachment: fixed;
     opacity: 0.9;
-    /* margin-top: -20px; */
   }
   
   .nav, .portfolio, .footer {
     background-color: #eeeeee;
   }
- 
   
   .title {
     background-color: hsla(120,60%,70%,0.3);
@@ -70,53 +65,33 @@ body {
     color: white;
   }
   
-  
-  
-  
-  
-  
-  
-  /* TEXT */
+  /* Text */
   .centered {
     text-align: center;
   }
   
   input, textarea {
     font-size: 0.8rem;
-    /* width and padding under media queries in grid.css */
   }
-  
-  /* TITLE  */
-  /* .title {
-    justify-self: center;
-  } */
-  
-  
-  /* IMAGES */
+ 
+  /* Images */
   .img-responsive {
     max-width: 100%;
     height: auto;
     border-radius: 3%;
   }
   
-
-  
-  /* BUTTON */
+  /* Button */
   .btn {
     -webkit-border-radius: 28;
     -moz-border-radius: 28;
     border-radius: 28px;
-    /* text-shadow: 1px 1px 3px #666666; */
-    /* -webkit-box-shadow: 0px 1px 3px #666666;
-    -moz-box-shadow: 0px 1px 3px #666666;
-    box-shadow: 0px 1px 3px #666666; */
     background-color: hsla(120,60%,70%,0.3); 
     padding: 10px 20px 10px 20px;
     text-decoration: none;
     font-weight: 700;
     cursor: pointer;
     font-size: 1.1rem;
-    /* font-size: 0.9em in max-width:600px media query in grid.css */
   }
   
   .btn:hover {
@@ -124,42 +99,13 @@ body {
     color: #000000;
   }
   
-  /* FORM */
-  input[type=text], input[type=email], textarea {
-    box-sizing: border-box;
-    border: 2px solid #e0e0e0;
-    /*width and padding in media queries in grid.css */
-  
-  }
-  
-  
-  /* CURSOR */
+  /* Cursor */
   .pointer-cursor {
     cursor: pointer;
   }
   
   
-  /* GRID.CSS */
-  
-  /* Includes:
-  - CSS grid
-  - media queries and breakpoints for grid and affected items, including:
-   * avatar / img-av
-   * form element width, padding and margin
-   * button size
-   * jumbotron padding
-   * span padding and font size
-  - padding
-  - margin */
-  
-  
-  /* * {
-    border: 1px solid red
-  } */
-  
-  body {
-  }
-  
+  /* GRID  */
   .container {
     padding: 0;
     margin: 0;
@@ -172,11 +118,10 @@ body {
     padding-bottom: 3vh;
   }
 
-  .nav-content, .jumbotron-content, .about-content, .portfolio-content, .contact-content, .footer-content, {
+  .nav-content, .jumbotron-content, .about-content, .portfolio-content, .contact-content, .footer-content {
     margin-left: 10vw;
     margin-right: 10vw;
   }
-  
   
   .about-content {
     padding-bottom: 2vh;
@@ -238,11 +183,6 @@ body {
       "d d e e f f";
     }
   
-    input[type=text], input[type=email], textarea {
-      width: 60%;
-      padding: 1% 2%;
-      margin: 0.5% 0;
-    }
     .jumbotron {
       padding-top: 20vh;
       padding-bottom: 20vh;
@@ -272,10 +212,6 @@ body {
       "c c d d"
       "e e f f";
     }
-    input[type=text], input[type=email], textarea {
-      width: 70%;
-      padding: 2% 2%;
-    }
     .jumbotron {
       padding-top: 20vh;
       padding-bottom: 20vh;
@@ -290,7 +226,7 @@ body {
   
   
   
-  /* MAX WIDTH - 600PX */
+  /* Max Width 600PX */
   @media (max-width: 600px) {
   
     .about-content {
@@ -311,10 +247,6 @@ body {
     }
     .jumbotron {
       padding-bottom: 25vh;
-    }
-    input[type=text], input[type=email], textarea {
-      width: 80%;
-      padding: 3% 2%;
     }
     .btn {
       font-size: 0.9rem;
