--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,356 +1,342 @@
-/* CSS Styling */
 
-/*Overall font*/
+/* PORTFOLIO CSS STYLES*/
+
+
+* {
+    box-sizing: border-box;
+}
+
+/* Site Core Colors*/
+:root {
+    --primary: rgb(121,82,125);
+    /* --secondary: rgba(146, 204, 206, 1); */
+    --secondary:rgb(240,121,82);
+    --tertiary: rgb(240,121,82)
+    --dark: rgba(28, 29, 33, 1);
+    --light: rgba(238, 238, 247, 1);
+}
+
 body {
-  font-family:'Montserrat', sans-serif;
-  font-size: 1rem;
-}
-
-.img-max{
-  max-width: 80%;
-  -ms-flex-align: center;
-  padding-right: 10px;
-  padding-left: 10px;
-  max-height: auto;
-  border-radius: 5%;
-}
-  /* Headers and Links */
-  
-  h1, h2 {
-    font-weight: 700 !important;
-    color:#178617
-  }
-  
-  h2 {
-    font-size: 2.5em;
-    align-self: center;
-  }
-  
-  /* HYPERLINKS */
-  
-  a {
-    color: rgba(36, 165, 36, 0.897);
-    text-decoration: none;
-    font-weight: 700;
-  }
-  
-  a:hover {
-    color: #000000 !important;
-    text-decoration: none;
-    font-weight: 700;
-  }
-  
-  /* SPAN */
-  
-  span {
-    padding-left: 1vw;
-    padding-right: 1vw;
-  }
-  
-  .nav {
-    background-color: #ffffff;
-    text-align: right;
-  }
-  
-  .jumbotron {
-    background-image: url(https://www.wallpapertip.com/wmimgs/82-822562_src-gorgerous-coding-background-data-id-programming.jpg) !important;
-    background-position: 50% 100%;
-    background-attachment: fixed;
-    opacity: 0.9;
-  }
-  
-  .nav, .portfolio, .footer {
-    background-color: #eeeeee;
-  }
-  
-  .title {
-    background-color: hsla(120,60%,70%,0.3);
-    color: white;
-    font-size: 4.5rem;
-  }
-  .jumbo-caption {
-    background-color:hsla(120,60%,70%,0.3);
-    font-size: 1.7rem;
-    color: white;
-  }
-  
-  /* Text */
-  .centered {
-    text-align: center;
-  }
-  
-  input, textarea {
-    font-size: 0.8rem;
-  }
- 
-  /* Images */
-
-  .img-responsive {
-    max-width: 100%;
-    max-height: auto;
-    border-radius: 5%;
-  }
-
-
-  
-  /* Button */
-  .btn {
-    -webkit-border-radius: 28;
-    -moz-border-radius: 28;
-    border-radius: 28px;
-    background-color: hsla(120,60%,70%,0.3); 
-    padding: 10px 20px 10px 20px;
-    text-decoration: none;
-    font-weight: 700;
-    cursor: pointer;
-    font-size: 1.1rem;
-  }
-  
-  .btn:hover {
-    text-decoration: none;
-    color: #000000;
-  }
-  
-  /* Cursor */
-  .pointer-cursor {
-    cursor: pointer;
-  }
-  
-  
-  /* GRID  */
-  .container {
-    padding: 0;
     margin: 0;
-    display: grid;
-    grid-template: repeat(2, auto) / 2fr;
-  }
-  
-  .nav {
-    padding-top: 3vh;
-    padding-bottom: 3vh;
-  }
-
-  .nav-content, .jumbotron-content, .about-content, .portfolio-content, .contact-content, .footer-content {
-    margin-left: 10vw;
-    margin-right: 10vw;
-    
-  }
-  .portfolio-feature {
-    margin-left: 10vw;
-    margin-right: 10vw;
-  }
-  .about-content {
-    padding-bottom: 2vh;
-    margin-left: 10vw;
-    margin-right: 10vw;
-  }
-  
-  .about-avatar {
-    grid-area: aa;
-    padding-right: 2vw;
-    padding-top: 4vh;
-    padding-bottom: 2vh;
-  }
-  .about-text {
-    grid-area: at;
-  }
-  
-  .portfolio-content div:nth-child(1) {
-    grid-area: a;
-  }
-  .portfolio-content div:nth-child(2) {
-    grid-area: b;
-  }
-  .portfolio-content div:nth-child(3) {
-    grid-area: c;
-  }
-  .portfolio-content div:nth-child(4) {
-    grid-area: d;
-  }
-  .portfolio-content div:nth-child(5) {
-    grid-area: e;
-  }
-
-
-  .social .h2 {
-  align-content: center;
-  }
-  
-
-/* Social Icon set from Font Awesome */
-ul.social-set {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  height: auto;
-  width: auto;
-}
-ul.social-set li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+    padding: 0;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: var(--primary);
+    background-color: var(--light);
+    line-height: 1.5;
 }
 
-a.sociali {
-  font-size: 2em;
-  line-height: 1.2em;
-  padding: 10px;
-  background: #accfc0;
-  color: #fff;
-  margin-right: 10px;
-  margin-bottom: 10px !important;
-  padding-bottom: 10px !important;
-}
-a.sociali:hover, a.sociali:focus {
-  background: #6d8785;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
 
-/* Footer Content */
-body {
-  margin: 0;
-  padding: 5% 10%;
-  background: #dcd7ce;
-  color: #333;
-  font-family: sans-serif;
-  font-size: 100%;
- 
-}
 p {
-  text-align: center;
-  padding-top: 1em;
+    margin: 0;
+}
+/* Header Items */
+header {
+    padding: 15px 6% 15px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    background-color: var(--tertiary);
+    box-shadow: 0 5px 35px rgb(240,121,82);
+}
+
+header h1 {
+    color: var(--tertiary);
+    background-color: var(--secondary);
+    padding: 5px 1% 5px 5%;
+    margin: 0;
+    font-size: 3vw;
+    line-height: 1;
+}
+
+header a:hover {
+    color: var(--light);
+}
+
+/* Navigational Items */
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+nav a {
+    text-decoration: none;
+    padding: 5px 10px;
+    color: var(--secondary);
+    margin-right: 10px;
+    background-image: linear-gradient(270deg, var(--secondary) 0%, var(--secondary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.1s ease-in;
+    font-size: 1.4rem;
+}
+
+nav a:hover {
+    background-size: 100% 100%;
+    color: var(--light);
+}
+
+nav a:last-child {
+    margin-right: 0;
+}
+
+main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+}
+
+.light {
+    color: var(--light);
+}
+/* Hero Content */
+.hero-banner {
+    background: rgb(68, 88, 120);
+    background-image: url("../images/lion.jpg"), linear-gradient(90deg, var(--secondary) 0%, var(--primary) 100%);
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: soft-light;
+    min-height: 30vh;
+    color: var(--light);
+    padding: 2% 6%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+    padding-left: 10vw;
+}
+
+.hero-banner img {
+    width: 150px;
+    margin: 20px;
+    border-radius: 10%;
+    opacity: 0.8;
+}
+
+.hero-banner img:hover{
+    opacity: 1;
+}
+
+.hero-banner div {
+    flex: 0 0 90%;
+}
+
+.hero-banner h2 {
+    background-color: var(--secondary);
+    color: var(--tertiary);
+    margin: 0;
+    padding: 5px 10px;
+    font-size: 2.2rem;
+    line-height: 1.2;
+    display: inline;
+}
+
+/* Main Page Content */
+
+.page-wrapper {
+    max-width: 85%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.page-section {
+    margin: 25px 0;
+    padding: 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch;
+    justify-content: space-between;
+}
+
+.page-section > h2 {
+    flex: 0 0 20%;
+    text-align: right;
+    padding-right: 15px;
+    border-right: 4px solid var(--primary);
+    font-size: vw;
+    line-height: 1.1;
+}
+
+.page-section > div {
+    flex: 0 0 75%;
+}
+
+.page-section p {
+    margin-bottom: 20px;
+    color: black;
+}
+
+/* Grid Structure */
+.grid-container {
+    display: grid;
+    column-gap: 10px;
+    row-gap: 10px;
+    grid-auto-flow: dense;
+    grid-template-columns: repeat(12, 1fr);
+    grid-auto-rows: minmax(150px, 1fr);
+}
+
+.grid-item {
+    border: 5px solid var(--secondary);
+    grid-column: span 4;
+    background-color: var(--primary);
+    color: var(--tertiary);
+    min-height: 100px;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    text-decoration: none;
+    background-blend-mode: soft-light;
+    background-size: 150%;
+    transition: all 0.5s;
+    font-size: 0.8rem;
+}
+
+/* Portfolio - Feature First Child */
+.grid-item:first-child {
+    grid-column: span 8;
+    grid-row: span 2;
+}
+
+.grid-item:hover {
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+.grid-item div {
+    background-color: var(--secondary);
+    padding: 8px 10px;
+}
+
+.grid-item h3 {
+    font-size: 1.6rem;
+}
+
+/* Contact Section */
+.contact address {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+}
+
+.contact address a {
+    color: var(--tertiary);
+    padding: 5px;
+    text-decoration: none;
+    font-size: 1.1rem;
+    font-style: normal;
+    background-image: linear-gradient(270deg, var(--primary) 0%, var(--primary) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    margin: 0 0.2rem 0.1rem;
+    display: inline-block;
+}
+
+.contact address a:hover {
+    background-size: 100% 88%;
+    color: var(--light);
+}
+
+/* Images Used */
+.run-buddy {
+    background-image: url("../images/run-buddy.png");
+}
+
+.horiseon {
+    background-image: url("../images/horiseon.png");
+}
+
+.navmenu {
+    background-image: url("../images/navmenu.png");
+}
+
+.about {
+    background-image: url("../images/about.png");
+}
+
+.odds {
+    background-image: url("../images/odds.png"); 
+}
+
+.games {
+    background-image: url("../images/games.png"); 
 }
 
 
 
+/* MEDIA QUERIES*/
 
-  /* MIN WIDTH - 1200PX */
-  @media (min-width: 1200px) {
-  
-    .about-content {
-      display: grid;
-      grid-template-areas:
-      "aa aa at at at at";
-    }
-
-    .wrapper {
-      flex-wrap: wrap;
-      padding-right: 10vw;
-      padding-left: 10vw;
-    }
-  
-    .portfolio-content {
-      display: grid;
-      flex-wrap: wrap;
-      grid-template-areas:
-      "a a a b b b"
-      "c c c d d d";
-    }
-  
-    .jumbotron {
-      padding-top: 20vh;
-      padding-bottom: 20vh;
-      background-color: #db7c0e;
-    }
-    .img-av {
-      max-width: 250px;
-      height: auto;
-      border-radius: 50%;
-    }
-  }
-  
-  
-  /* MIN WIDTH - 106PX AND MAX WIDTH - 1999PX */
-  @media (max-width: 1199px) {
-  
-    .about-content {
-      display: grid;
-      grid-template-areas:
-      "aa aa aa"
-      "at at at";
+@media screen and (max-width: 980px) {
+    header {
+        padding: 0 0 10px 0;
+        justify-content: center;
+        text-align: center;
     }
 
-    .wrapper {
-      flex-wrap: wrap;
-      padding-right: 1vw;
-      padding-left: 1vw;
-    }
-    .portfolio-content {
-      display: grid;
-      grid-template-areas:
-      "a a b b "
-      "c c d d"
-    }
-    .jumbotron {
-      padding-top: 20vh;
-      padding-bottom: 20vh;
-    }
-  
-    .img-av {
-      max-width: 200px;
-      height: auto;
-      border-radius: 50%;
-    }
-  }
-  
-  
-  
-  /* Media Queries - Max Screen Width 600px */
-  @media (max-width: 600px) {
-  
-    .nav {
-      text-align: center;
-    }
-    .img-av {
-      max-width: 170px;
-      height: auto;
-      border-radius: 50%;
+    header h1 {
+        width: 100%;
+        padding: 5px;
+        margin-bottom: 10px;
+        font-size: 10vw;
     }
 
-    .jumbotron {
-      padding-top: 15vh;
-      padding-bottom: 15vh;
+    header nav {
+        justify-content: center;
     }
-    .about-content {
-      display: grid;
-      grid-template-areas:
-      "aa aa aa"
-      "at at at";
+
+    .page-section > h2,
+    .page-section > div {
+        flex: 0 0 100%;
     }
-    .btn {
-      font-size: 0.9rem;
-      color:#db7c0e
+
+    .page-section > h2 {
+        border-right: none;
+        border-bottom: 4px solid var(--primary);
+        margin-bottom: 20px;
+        padding-bottom: 10px;
+        text-align: left;
+        font-size: 7vw;
     }
-  
-    .portfolio-content {
-      display: grid;
-      grid-template-areas:
-      "a"
-      "b"
-      "c"
-      "d";
+
+    .hero-banner {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        padding-left: 50px;
     }
-    
-    span {
-      padding-left: 1vw;
-      padding-right: 1vw;
-      font-size: 0.9rem;
+
+}
+
+@media screen and (max-width: 768px) {
+    .grid-item,
+    .grid-item:first-child {
+        grid-column: 1 / -1;
     }
-  }
+
+    .grid-container {
+        grid-auto-rows: minmax(200px, 1fr);
+    }
+
+
+    .contact address {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+}
