--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family:'Montserrat', sans-serif;
     color: var(--primary);
     background-color: var(--light);
     line-height: 1.5;
